--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,10 @@
             <div class="form-group">
               <%= f.text_area :description, rows: 5, cols: 25,  :placeholder => "自己紹介文", :class => 'form-control' %>
             </div>
+            
+            <div class="form-group">
+              <%= f.file_field :image, :class => 'form-control' %>
+            </div>
 
             <div class="form-group">
               <%= f.label :新しいパスワード %> <i>(変更しない場合は空欄で構いません)</i><br />
