--- a/app/views/listings/description.html.erb
+++ b/app/views/listings/description.html.erb
@@ -21,7 +21,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>タイトル</label>
-                                <%= f.text_field :listing_title, placeholder: "リスティングタイトルを記載しましょう", class: "form-control" %>
+                                <%= f.text_field :listing_title, placeholder: "リスティングタイトルを記載しましょう", class: "form-control", required: 'true' %>
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>内容</label>
-                                <%= f.text_area :listing_content, rows: 8, placeholder: "リスティングの内容について記述してください", class: "form-control" %>
+                                <%= f.text_area :listing_content, rows: 8, placeholder: "リスティングの内容について記述してください", class: "form-control", required: 'true' %>
                             </div>
                         </div>
                     </div>
