--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -166,15 +166,19 @@
 
 
     <!-- レビュー -->
-    <div class="row">
-        <div class="col-md-9">
-            <h3 class="row-space-3">レビュー</h3>
-        </div>
+    <div class="row row-space-4">
+      <div class="col-md-9">
+        <h3 class="row-space-3">レビュー<%= @reviews.count %>件</h3>
+        <div id="average_star_rate"></div>
+        <%= render 'reviews/form' if @currentUserBooking && !@currentUserReview %>
+        <%= render 'reviews/list' %>
+      </div>
 
-        <div class="col-md-3">
+      <div class="col-md-3">
 
-        </div>
+      </div>
     </div>
+
 
     <!-- google map -->
     <div class="row">
@@ -416,4 +420,12 @@ $(function() {
     }
   });
 });
+</script>
+
+<script type="text/javascript" charset="utf-8">
+  $('#average_star_rate').raty({
+    path: '/assets',
+    readOnly: true,
+    score: <%= @listing.average_star_rate %>
+  });
 </script>
