--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,24 +20,31 @@
 <div class="container">
     <div class="row">
       <div class="col-lg-3 col-md-4">
-          <div class="user-profile row-space-4 text-center">
-              <%= image_tag @user.image, class: 'profile-full img-circle' %>
-          </div>
+        <div class="user-profile row-space-4 text-center">
+          <%= image_tag @user.image, class: 'profile-full img-circle' %>
+        </div>
 
-          <div class="panel panel-default verifications hidden-xs hidden-sm">
-              <div class="panel-heading">認証済みID</div>
-              <div class="panel-body">
-                  <div id="ver-email">メールアドレス</div>
-                  <div id="ver-tel">電話番号</div>
-                  <div id="ver-facebook">Facebook</div>
-              </div>
+        <!-- send message ボタン -->
+        <% if current_user != @user %>
+          <div class="row-space-2">
+            <%= link_to "メッセージを送る", conversations_path(sender_id: current_user.id, recipient_id: @user.id), method: 'post', class: 'btn btn-danger btn-full' %>
           </div>
+        <% end %>
+
+        <div class="panel panel-default verifications hidden-xs hidden-sm">
+          <div class="panel-heading">認証済みID</div>
+          <div class="panel-body">
+            <div id="ver-email">メールアドレス</div>
+            <div id="ver-tel">電話番号</div>
+            <div id="ver-facebook">Facebook</div>
+          </div>
+        </div>
       </div>
 
       <div class="col-lg-9 col-md-8 col-sm-12">
-          <h1>こんにちわ <%= @user.name %>です!</h1>
-          <p>自己紹介</p>
-          <%= @user.description%>
+        <h1>こんにちわ <%= @user.name %>です!</h1>
+        <p>自己紹介</p>
+        <%= @user.description %>
       </div>
     </div>
 </div>
