--- a/app/views/listings/publish.html.erb
+++ b/app/views/listings/publish.html.erb
@@ -36,7 +36,7 @@
 </div>
 
 <script type="text/javascript">
-    <% if @listing.not_checked > 0 %>
+    <% if @listing.not_checked != nil && @listing.not_checked > 0 %>
     $(function () {
         $('select#listing_active').attr('disabled', 'disabled');
     });
